testsuite/tests/linear/should_fail/LinearLazyPat.stderr

LinearLazyPat.hs:5:3: error:
    • Nontrivial multiplicity equalities are currently not supported
    • In the pattern: ~(x, y)
      In an equation for ‘f’: f ~(x, y) = (y, x)

LinearLazyPat.hs:5:3: error:
    • Couldn't match type ‘'Omega’ with ‘'One’
        arising from a non-linear pattern
    • In the pattern: ~(x, y)
      In an equation for ‘f’: f ~(x, y) = (y, x)
